--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Support de Code pour le cours OpenClassrooms Creez des pages web dynamiques avec javascript",
   "main": "pieces.js",
   "scripts": {
-    "start":"http-server",
-    "dev":"http-server"
+    "start": "http-server",
+    "dev": "http-server",
+    "build":"tailwindcss build src/styles.css -o public/styles.css --watch"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,9 @@
   },
   "homepage": "https://github.com/OpenClassrooms-Student-Center/7697016-Front-End.1#readme",
   "dependencies": {
-    "http-server": "^14.1.1"
+    "autoprefixer": "^10.4.13",
+    "http-server": "^14.1.1",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
